--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "@angular/compiler": "~11.0.5",
     "@angular/core": "~11.0.5",
     "@angular/forms": "~11.0.5",
+    "@angular/localize": "~11.0.5",
     "@angular/platform-browser": "~11.0.5",
     "@angular/platform-browser-dynamic": "~11.0.5",
     "@angular/router": "~11.0.5",
-    "bootstrap": "^4.5.3",
+    "@ng-bootstrap/ng-bootstrap": "^9.0.2",
+    "bootstrap": "^3.3.7",
+    "jquery": "^3.5.1",
     "rxjs": "~6.6.0",
+    "tether": "^1.4.7",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
